--- a/DFW-Mobile/src/resources/mobile.css
+++ b/DFW-Mobile/src/resources/mobile.css
@@ -10,6 +10,7 @@
     .land-item, .land-btn {
         margin-bottom: 12px;
         font-size: 1.3em;
+        cursor: 'pointer';
     }
     .section1-box {
         width: 90%;
@@ -27,10 +28,15 @@
     }
     .serviceBlock {
         font-size: 1.2em;
+        cursor: 'pointer';
     }
     .service-list {
         margin-top: 20px;
         border-radius: 16px;
+        cursor: 'pointer';
+    }
+    .hours-list {
+        cursor: 'pointer';
     }
     .land-item, .phone-btn {
         color: #FFF;
@@ -38,6 +44,7 @@
         background: rgba(0, 0, 0, 0.75);
         text-decoration: none;
         margin-top: 4px;
+        cursor: 'pointer';
     }
     .land-item:active {
         color: #FFF;
@@ -57,8 +64,13 @@
     .form-block {
         width: 100%;
         display: block;
+        cursor: 'pointer';
     }
     .popup-box {
         max-width: 80vw;
+        cursor: 'pointer';
+    }
+    .go-up, .form-input-text, .form-input-textarea, .form-button, .popup-button {
+        cursor: 'pointer';
     }
 }
